added system with upload image in React changed system with storing logged user data globally

--- a/docker/.env
+++ b/docker/.env
@@ -1,5 +1,5 @@
-APP_PATH=C:/vhost/ArtSwap/Symfony
-FRONT_PATH=C:/vhost/ArtSwap/React
+APP_PATH=D:/vhost/ArtSwap/Symfony
+FRONT_PATH=D:/vhost/ArtSwap/React
 
 COMPOSE_PROJECT_NAME=artswap
 APP_NAME=artswap
