added display of Collection's items on profile page added posssibility do remove collections and items added Views system added metamask connect system added display of account balance on header added system of security to API (work in progresss)

--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -19,6 +19,7 @@ RUN docker-php-ext-install -j$(nproc) gd
 # apache mods
 RUN a2enmod ssl
 RUN a2enmod rewrite
+RUN a2enmod headers
 
 # composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
