--- a/docker/server/site.conf
+++ b/docker/server/site.conf
@@ -9,4 +9,6 @@
         AllowOverride All
         Require all granted
     </Directory>
+
+    RequestHeader set Authorization "%{HTTP:Authorization}e"
 </VirtualHost>
