added Lazy loading system added shortName and shortDescription to NFT and collections added filter system to remaining searching endpoints first steps into Solidity (added first test contract)

--- a/Symfony/config/packages/security.yaml
+++ b/Symfony/config/packages/security.yaml
@@ -23,8 +23,8 @@ security:
             jwt: ~
 
     access_control:
-        - { path: ^/api/user, roles: ROLE_USER }
-        - { path: ^/api/admin, roles: ROLE_ADMIN }
+        # - { path: ^/api/user, roles: ROLE_USER }
+        # - { path: ^/api/admin, roles: ROLE_ADMIN }
 
 when@test:
     security:
