--- a/React/package.json
+++ b/React/package.json
@@ -19,10 +19,13 @@
     "bootstrap": "^5.3.3",
     "ethers": "^6.13.3",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
+    "react-intersection-observer": "^9.13.1",
     "react-jwt": "^1.2.1",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
