--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6"
+  },
+  "devDependencies": {
+    "hardhat": "^2.22.15"
   }
 }
