--- a/Symfony/config/packages/security.yaml
+++ b/Symfony/config/packages/security.yaml
@@ -9,6 +9,18 @@ security:
                 property: email
 
     firewalls:
+        login:
+            pattern: ^/api/login
+            stateless: true
+            json_login:
+                check_path: /api/login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+        api:
+            pattern: ^/api
+            stateless: true
+            jwt: ~
+
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -17,14 +29,11 @@ security:
             lazy: true
             provider: app_user_provider
 
-        api:
-            pattern:   ^/api
-            stateless: true
-            jwt: ~
-
     access_control:
-        # - { path: ^/api/user, roles: ROLE_USER }
-        # - { path: ^/api/admin, roles: ROLE_ADMIN }
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/register, roles: PUBLIC_ACCESS }
+        - { path: ^/api/user, roles: ROLE_USER }
+        - { path: ^/api/admin, roles: ROLE_ADMIN }
 
 when@test:
     security:
